# trident

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs  test_banner_main.rs
src/data/: common_ports.rs  data_types.rs  mod.rs
src/domain_resolver/: domain.rs
src/evasion/: decoy_generator.rs  ip_spoofing.rs  mod.rs  port_spoofing.rs
src/os_fingerprint/: banner_grabber.rs  comprehensive_test.rs  database_case_tests.rs  fingerprint_db.rs  mod.rs  protocol_detector.rs  service_probes.rs  test_banner.rs  ttl_analyzer.rs
src/os_fingerprint/database_probes/: mod.rs  mssql_probe.rs  mysql_probe.rs  oracle_probe.rs  postgresql_probe.rs  test_refactor.rs  types.rs
src/output/: mod.rs
src/plugins/: database_detection.rs  mod.rs  os_fingerprint_plugin.rs  plugin_manager.rs  plugin_trait.rs  service_detection.rs  vuln_database_plugin.rs  vulnerability_scanner.rs
src/plugins/core/: mod.rs
src/plugins/loader/: mod.rs  native.rs  script.rs
src/plugins/registry/: mod.rs
src/plugins/shared_services/: database_service.rs  mod.rs
src/plugins/vulnerability_plugins/: auth_vulns.rs  config_vulns.rs  crypto_vulns.rs  database_vulns.rs  injection_vulns.rs  mod.rs  network_vulns.rs  web_vulns.rs
src/scanner/: connectscanner.rs  evasive_wrapper.rs  mod.rs  structure.rs  synscanner.rs  udp_scanner.rs
src/vulndb/: cve_database.rs  mod.rs  nmap_style_scripts.rs  vulnerability_db.rs
src/vulndb/cve/: cache.rs  confidence.rs  mod.rs
