[package]
name = "project_trident"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_banners"
path = "src/test_banner_main.rs"
license = "Apache-2.0"
[dependencies]
pnet = "0.35.0"
pnet_transport = "0.35.0"
rand = "0.9.2"
time = "0.3.43"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
trust-dns-resolver = "0.23"
tokio = { version = "1.0.1", features = ["full"] }
rayon = "1.11.0"
regex = "1.11.2"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
tokio-stream = "0.1"
flate2 = "1.0"
serde_json = "1.0.143"
rustls = "0.23.31"
tokio-rustls = "0.26.2"
